cdk.out/Vpc.template.json
{
  "Resources": {
    "Vpc8378EB38": {
      "Type": "AWS::EC2::VPC",
      "Properties": {
        "CidrBlock": "10.2.0.0/16",
        "EnableDnsHostnames": true,
        "EnableDnsSupport": true,
        "InstanceTenancy": "default",
        "Tags": [
          {
            "Key": "Name",
            "Value": "vpc-tapnow-staging"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "Vpc/Vpc/Resource"
      }
    },
    "VpcvpctapnowstagingPublicSubnet1Subnet1SubnetA8DA5383": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.2.0.0/20",
        "VpcId": {
          "Ref": "Vpc8378EB38"
        },
        "AvailabilityZone": "ap-southeast-1a",
        "MapPublicIpOnLaunch": true,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "vpc-tapnow-staging-PublicSubnet-1"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Public"
          },
          {
            "Key": "Name",
            "Value": "vpc-tapnow-staging-PublicSubnet-1-ap-southeast-1a"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "Vpc/Vpc/vpc-tapnow-staging-PublicSubnet-1Subnet1/Subnet"
      }
    },
    "VpcvpctapnowstagingPublicSubnet1Subnet1RouteTable314B5687": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "Vpc8378EB38"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "vpc-tapnow-staging-PublicSubnet-1-ap-southeast-1a"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "Vpc/Vpc/vpc-tapnow-staging-PublicSubnet-1Subnet1/RouteTable"
      }
    },
    "VpcvpctapnowstagingPublicSubnet1Subnet1RouteTableAssociationFBB35046": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "VpcvpctapnowstagingPublicSubnet1Subnet1RouteTable314B5687"
        },
        "SubnetId": {
          "Ref": "VpcvpctapnowstagingPublicSubnet1Subnet1SubnetA8DA5383"
        }
      },
      "Metadata": {
        "aws:cdk:path": "Vpc/Vpc/vpc-tapnow-staging-PublicSubnet-1Subnet1/RouteTableAssociation"
      }
    },
    "VpcvpctapnowstagingPublicSubnet1Subnet1DefaultRoute8A014EB0": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "VpcvpctapnowstagingPublicSubnet1Subnet1RouteTable314B5687"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": {
          "Ref": "VpcIGWD7BA715C"
        }
      },
      "DependsOn": [
        "VpcVPCGWBF912B6E"
      ],
      "Metadata": {
        "aws:cdk:path": "Vpc/Vpc/vpc-tapnow-staging-PublicSubnet-1Subnet1/DefaultRoute"
      }
    },
    "VpcvpctapnowstagingPublicSubnet1Subnet1EIPDFB09705": {
      "Type": "AWS::EC2::EIP",
      "Properties": {
        "Domain": "vpc",
        "Tags": [
          {
            "Key": "Name",
            "Value": "vpc-tapnow-staging-PublicSubnet-1-ap-southeast-1a"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "Vpc/Vpc/vpc-tapnow-staging-PublicSubnet-1Subnet1/EIP"
      }
    },
    "VpcvpctapnowstagingPublicSubnet1Subnet1NATGateway5EA488BB": {
      "Type": "AWS::EC2::NatGateway",
      "Properties": {
        "SubnetId": {
          "Ref": "VpcvpctapnowstagingPublicSubnet1Subnet1SubnetA8DA5383"
        },
        "AllocationId": {
          "Fn::GetAtt": [
            "VpcvpctapnowstagingPublicSubnet1Subnet1EIPDFB09705",
            "AllocationId"
          ]
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "vpc-tapnow-staging-PublicSubnet-1-ap-southeast-1a"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "Vpc/Vpc/vpc-tapnow-staging-PublicSubnet-1Subnet1/NATGateway"
      }
    },
    "VpcvpctapnowstagingPublicSubnet1Subnet2SubnetA9029BA0": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.2.16.0/20",
        "VpcId": {
          "Ref": "Vpc8378EB38"
        },
        "AvailabilityZone": "ap-southeast-1b",
        "MapPublicIpOnLaunch": true,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "vpc-tapnow-staging-PublicSubnet-1"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Public"
          },
          {
            "Key": "Name",
            "Value": "vpc-tapnow-staging-PublicSubnet-1-ap-southeast-1b"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "Vpc/Vpc/vpc-tapnow-staging-PublicSubnet-1Subnet2/Subnet"
      }
    },
    "VpcvpctapnowstagingPublicSubnet1Subnet2RouteTableB926F755": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "Vpc8378EB38"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "vpc-tapnow-staging-PublicSubnet-1-ap-southeast-1b"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "Vpc/Vpc/vpc-tapnow-staging-PublicSubnet-1Subnet2/RouteTable"
      }
    },
    "VpcvpctapnowstagingPublicSubnet1Subnet2RouteTableAssociationA85694B9": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "VpcvpctapnowstagingPublicSubnet1Subnet2RouteTableB926F755"
        },
        "SubnetId": {
          "Ref": "VpcvpctapnowstagingPublicSubnet1Subnet2SubnetA9029BA0"
        }
      },
      "Metadata": {
        "aws:cdk:path": "Vpc/Vpc/vpc-tapnow-staging-PublicSubnet-1Subnet2/RouteTableAssociation"
      }
    },
    "VpcvpctapnowstagingPublicSubnet1Subnet2DefaultRoute54E25E75": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "VpcvpctapnowstagingPublicSubnet1Subnet2RouteTableB926F755"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": {
          "Ref": "VpcIGWD7BA715C"
        }
      },
      "DependsOn": [
        "VpcVPCGWBF912B6E"
      ],
      "Metadata": {
        "aws:cdk:path": "Vpc/Vpc/vpc-tapnow-staging-PublicSubnet-1Subnet2/DefaultRoute"
      }
    },
    "VpcvpctapnowstagingPrivateSubnet1Subnet1Subnet09BFC0F2": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.2.32.0/20",
        "VpcId": {
          "Ref": "Vpc8378EB38"
        },
        "AvailabilityZone": "ap-southeast-1a",
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "vpc-tapnow-staging-PrivateSubnet-1"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Private"
          },
          {
            "Key": "Name",
            "Value": "vpc-tapnow-staging-PrivateSubnet-1-ap-southeast-1a"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "Vpc/Vpc/vpc-tapnow-staging-PrivateSubnet-1Subnet1/Subnet"
      }
    },
    "VpcvpctapnowstagingPrivateSubnet1Subnet1RouteTableEBB81259": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "Vpc8378EB38"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "vpc-tapnow-staging-PrivateSubnet-1-ap-southeast-1a"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "Vpc/Vpc/vpc-tapnow-staging-PrivateSubnet-1Subnet1/RouteTable"
      }
    },
    "VpcvpctapnowstagingPrivateSubnet1Subnet1RouteTableAssociationC94C17E5": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "VpcvpctapnowstagingPrivateSubnet1Subnet1RouteTableEBB81259"
        },
        "SubnetId": {
          "Ref": "VpcvpctapnowstagingPrivateSubnet1Subnet1Subnet09BFC0F2"
        }
      },
      "Metadata": {
        "aws:cdk:path": "Vpc/Vpc/vpc-tapnow-staging-PrivateSubnet-1Subnet1/RouteTableAssociation"
      }
    },
    "VpcvpctapnowstagingPrivateSubnet1Subnet1DefaultRoute804E284A": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "VpcvpctapnowstagingPrivateSubnet1Subnet1RouteTableEBB81259"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "NatGatewayId": {
          "Ref": "VpcvpctapnowstagingPublicSubnet1Subnet1NATGateway5EA488BB"
        }
      },
      "Metadata": {
        "aws:cdk:path": "Vpc/Vpc/vpc-tapnow-staging-PrivateSubnet-1Subnet1/DefaultRoute"
      }
    },
    "VpcvpctapnowstagingPrivateSubnet1Subnet2SubnetBB35C6DA": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.2.48.0/20",
        "VpcId": {
          "Ref": "Vpc8378EB38"
        },
        "AvailabilityZone": "ap-southeast-1b",
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "vpc-tapnow-staging-PrivateSubnet-1"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Private"
          },
          {
            "Key": "Name",
            "Value": "vpc-tapnow-staging-PrivateSubnet-1-ap-southeast-1b"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "Vpc/Vpc/vpc-tapnow-staging-PrivateSubnet-1Subnet2/Subnet"
      }
    },
    "VpcvpctapnowstagingPrivateSubnet1Subnet2RouteTableC2A7CE6C": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "Vpc8378EB38"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "vpc-tapnow-staging-PrivateSubnet-1-ap-southeast-1b"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "Vpc/Vpc/vpc-tapnow-staging-PrivateSubnet-1Subnet2/RouteTable"
      }
    },
    "VpcvpctapnowstagingPrivateSubnet1Subnet2RouteTableAssociation42E21BAD": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "VpcvpctapnowstagingPrivateSubnet1Subnet2RouteTableC2A7CE6C"
        },
        "SubnetId": {
          "Ref": "VpcvpctapnowstagingPrivateSubnet1Subnet2SubnetBB35C6DA"
        }
      },
      "Metadata": {
        "aws:cdk:path": "Vpc/Vpc/vpc-tapnow-staging-PrivateSubnet-1Subnet2/RouteTableAssociation"
      }
    },
    "VpcvpctapnowstagingPrivateSubnet1Subnet2DefaultRoute3AE41EBA": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "VpcvpctapnowstagingPrivateSubnet1Subnet2RouteTableC2A7CE6C"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "NatGatewayId": {
          "Ref": "VpcvpctapnowstagingPublicSubnet1Subnet1NATGateway5EA488BB"
        }
      },
      "Metadata": {
        "aws:cdk:path": "Vpc/Vpc/vpc-tapnow-staging-PrivateSubnet-1Subnet2/DefaultRoute"
      }
    },
    "VpcIGWD7BA715C": {
      "Type": "AWS::EC2::InternetGateway",
      "Properties": {
        "Tags": [
          {
            "Key": "Name",
            "Value": "vpc-tapnow-staging"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "Vpc/Vpc/IGW"
      }
    },
    "VpcVPCGWBF912B6E": {
      "Type": "AWS::EC2::VPCGatewayAttachment",
      "Properties": {
        "VpcId": {
          "Ref": "Vpc8378EB38"
        },
        "InternetGatewayId": {
          "Ref": "VpcIGWD7BA715C"
        }
      },
      "Metadata": {
        "aws:cdk:path": "Vpc/Vpc/VPCGW"
      }
    },
    "CDKMetadata": {
      "Type": "AWS::CDK::Metadata",
      "Properties": {
        "Analytics": "v2:deflate64:H4sIAAAAAAAA/0WPzQqDMBCEn6X3mFYLvYuU4qWIFq8liVsaf5JiNkoR372x1uY03w7DMBvRMKKHHRtNIKomaCWnU4FMNMRZdxARncqXIMlDlVlCMstbKQrLFeDiecq1Rbgx3oL3vRcbo4VkKLX6hxc4p9kiV4YXhjCyN8l6OTj0xalC6B1vgXXJ74rRTX12oHAmORhte/Ht3XgmSldAa7MfwhM9ukdrI2XQW4WyA5qv+gFoEfJ+BAEAAA=="
      },
      "Metadata": {
        "aws:cdk:path": "Vpc/CDKMetadata/Default"
      }
    }
  },
  "Parameters": {
    "BootstrapVersion": {
      "Type": "AWS::SSM::Parameter::Value<String>",
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]"
    }
  },
  "Rules": {
    "CheckBootstrapVersion": {
      "Assertions": [
        {
          "Assert": {
            "Fn::Not": [
              {
                "Fn::Contains": [
                  [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5"
                  ],
                  {
                    "Ref": "BootstrapVersion"
                  }
                ]
              }
            ]
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI."
        }
      ]
    }
  }
}
